force-app/main/default/objects/PortfolioValuationConfig__c/PortfolioValuationConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PortfolioValuationConfig</label>
</CustomObject>