force-app/main/default/objects/PortfolioValuationConfig__c/fields/Completion_Day__c.field-meta.xml
<CustomField>
    <fullName>Completion_Day__c</fullName>
    <label>Completion Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>