force-app/main/default/objects/PortfolioValuationConfig__c/fields/Lock_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Lock_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock_Rollup</label>
    <type>Checkbox</type>
</CustomField>