force-app/main/default/objects/PortfolioValuationConfig__c/fields/Revenue_Month__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Month__c</fullName>
    <label>Revenue Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>