force-app/main/default/objects/PortfolioValuationConfig__c/fields/Revenue_Year__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Year__c</fullName>
    <label>Revenue Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>